# Only used for CLion intellisense for now
cmake_minimum_required(VERSION 4.0)
project(BrawlModules)

add_subdirectory(st_targetsmash)
add_subdirectory(st_village)
add_subdirectory(st_greenhill)
add_subdirectory(st_otrain)
add_subdirectory(st_starfox)
add_subdirectory(st_final)
add_subdirectory(st_stadium)
add_subdirectory(demos/st_demo)

